// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-fake-tabs Default Tabs 1`] = `
<DocumentFragment>
  <div
    class="fake-tabs"
  >
    <ul
      class="fake-tabs__items"
    >
      <li
        class="fake-tabs__item"
      >
        <a
          aria-current="page"
          href="http://ebay.com"
        >
          eBay.com
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.de"
        >
          eBay.de
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.co.uk"
        >
          eBay.co.uk
        </a>
      </li>
    </ul>
    <div
      class="fake-tabs__content"
    >
      <div
        class="fake-tabs__cell"
      >
        <h3>
          eBay.com Content
        </h3>
        <p>
          Some US content...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-fake-tabs Pre-selected Tab 1`] = `
<DocumentFragment>
  <div
    class="fake-tabs"
  >
    <ul
      class="fake-tabs__items"
    >
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.com"
        >
          eBay.com
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          aria-current="page"
          href="http://ebay.de"
        >
          eBay.de
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.co.uk"
        >
          eBay.co.uk
        </a>
      </li>
    </ul>
    <div
      class="fake-tabs__content"
    >
      <div
        class="fake-tabs__cell"
      >
        <h3>
          eBay.de Content
        </h3>
        <p>
          Some German content...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-fake-tabs tabMatchesCurrentUrl: false 1`] = `
<DocumentFragment>
  <div
    class="fake-tabs"
  >
    <ul
      class="fake-tabs__items"
    >
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.com"
        >
          eBay.com
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          href="http://ebay.de"
        >
          eBay.de
        </a>
      </li>
      <li
        class="fake-tabs__item"
      >
        <a
          aria-current="true"
          href="http://ebay.co.uk"
        >
          eBay.co.uk
        </a>
      </li>
    </ul>
    <div
      class="fake-tabs__content"
    >
      <div
        class="fake-tabs__cell"
      >
        <h3>
          eBay.co.uk Content
        </h3>
        <p>
          Some British content...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
